--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <div class="container">
             <div class="common-title-area text-center padding-50 wow fadeInUp">
                 <h3>food items</h3>
-                <h2>popular <span>menu</span> </h2>
+                <h2>Our <span>Services</span> </h2>
             </div>
             <!-- menu-nav-wrapper -->
             <div class="menu-nav-wrapper">
